--- a/src/components/heroCard/heroCard.scss
+++ b/src/components/heroCard/heroCard.scss
@@ -1,13 +1,12 @@
 
 .card-body {
-	width: 200px;
 	max-width: 100%;
-	margin: 0 auto;
+	margin: 8px auto;
 	margin-top: 15px;
 	border-radius: 3px;
 	cursor: pointer;
 
-	&.selected {
+	&.selected, &.selected:hover {
 		border-color: #40a9ff;
 		box-shadow: 0 0 0 5px rgba(24,144,255,0.2);
 	}
@@ -19,12 +18,13 @@
 	.hero-img {
 		border-radius: 50%;
 		max-width: 100%;
-		width: 150px;
 	}
 
-	h2 {
-		margin-top: 0.5em;
+	p {
+		margin-top: 1em;
+		margin-bottom: 0;
 		text-align: center;
 		white-space:nowrap;
+		font-size: 18px;
 	}
 }
