--- a/src/components/myHeroes/myHeroes.scss
+++ b/src/components/myHeroes/myHeroes.scss
@@ -3,7 +3,7 @@ body {
 	background-color: #f0f2f5;
 	padding: 15px;
 
-	.my-heros {
+	.my-heroes {
 		width: 850px;
 		max-width: 100%;
 		margin: 0 auto;
