--- a/src/components/heroCard/heroCard.scss
+++ b/src/components/heroCard/heroCard.scss
@@ -1,30 +1,35 @@
 
-.card-body {
-	max-width: 100%;
-	margin: 8px auto;
-	margin-top: 15px;
-	border-radius: 3px;
+.card-wrapper {
+	display: inline-block;
+	margin: 8px;
+	margin-bottom: 18px;
 	cursor: pointer;
 
-	&.selected, &.selected:hover {
-		border-color: #40a9ff;
-		box-shadow: 0 0 0 5px rgba(24,144,255,0.2);
+	.custom-card {
+		width: 180px;
+		border-radius: 6px;
+		
+		&.selected, &.selected:hover {
+			border: #40a9ff 1px solid;
+			box-shadow: 0 0 0 5px rgba(24,144,255,0.2);
+		}
+	
+		&:hover {
+			box-shadow: 0 0 0px 5px rgba(189, 189, 189, 0.2);
+		}
+
+		.hero-img {
+			border-radius: 50%;
+			max-width: 100%;
+		}
+	
+		p {
+			margin-top: 1em;
+			margin-bottom: 0;
+			text-align: center;
+			white-space:nowrap;
+			font-size: 18px;
+		}
 	}
 
-	&:hover {
-		box-shadow: 0 0 10px 5px rgba(136, 136, 136, 0.2);
-	}
-
-	.hero-img {
-		border-radius: 50%;
-		max-width: 100%;
-	}
-
-	p {
-		margin-top: 1em;
-		margin-bottom: 0;
-		text-align: center;
-		white-space:nowrap;
-		font-size: 18px;
-	}
 }
